Added advanced expectations and automated validation using APScheduler

--- a/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_3.ipynb
+++ b/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_3.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbatch\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BatchRequest\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Dataset\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_context\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataContext\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Step 1: Load Sample Data\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Replace this with your actual data path\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[17], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbatch\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BatchRequest\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Dataset\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_context\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataContext\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Step 1: Load Sample Data\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Replace this with your actual data path\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'great_expectations.dataset'"
      ]
     }
@@ -144,35 +144,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV file 'sample_data.csv' created successfully!\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mge\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_context\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataContext\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ExpectationSuite, ExpectationResult\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01munittest\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import great_expectations as ge\n",
+    "from great_expectations.data_context import DataContext\n",
+    "from great_expectations.core import ExpectationSuite, ExpectationResult\n",
+    "import unittest\n",
     "\n",
-    "# Create sample data\n",
-    "data = {\n",
-    "    'name': ['Alice', 'Bob', 'Charlie'],\n",
-    "    'age': [25, 30, None],  # Note that 'Charlie' has a missing age (NaN)\n",
-    "    'email': ['alice@example.com', 'bob@example.com', 'charlie@example.com']\n",
-    "}\n",
+    "# Setup Great Expectations DataContext\n",
+    "def setup_data_context():\n",
+    "    try:\n",
+    "        # Initialize the Great Expectations DataContext\n",
+    "        context = DataContext(\"/path/to/great_expectations/directory\")\n",
+    "        return context\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error initializing Great Expectations DataContext: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Convert the data into a DataFrame\n",
-    "df = pd.DataFrame(data)\n",
+    "# Load dataset with error handling\n",
+    "def load_data(file_path):\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The file {file_path} was not found.\")\n",
+    "        return None\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"Error: The file {file_path} is empty.\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred while loading the file: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Save the DataFrame as a CSV file\n",
-    "df.to_csv('sample_data.csv', index=False)\n",
+    "# Define basic expectations for the dataset\n",
+    "def create_expectations(df):\n",
+    "    # Expectation 1: Check if the columns exist\n",
+    "    if 'customer_id' not in df.columns:\n",
+    "        print(\"Error: 'customer_id' column is missing.\")\n",
+    "    else:\n",
+    "        print(\"'customer_id' column is present.\")\n",
     "\n",
-    "print(\"CSV file 'sample_data.csv' created successfully!\")\n",
-    "\n"
+    "    # Expectation 2: Check if customer_id is unique\n",
+    "    if df['customer_id'].duplicated().any():\n",
+    "        print(\"Error: 'customer_id' column contains duplicates.\")\n",
+    "    else:\n",
+    "        print(\"'customer_id' column is unique.\")\n",
+    "\n",
+    "    # Expectation 3: Check if the data types are as expected\n",
+    "    expected_dtypes = {\n",
+    "        'customer_id': 'int64',\n",
+    "        'age': 'float64',\n",
+    "        'gender': 'object'\n",
+    "    }\n",
+    "    \n",
+    "    for column, dtype in expected_dtypes.items():\n",
+    "        if column in df.columns and df[column].dtype != dtype:\n",
+    "            print(f\"Error: '{column}' is not of type {dtype}.\")\n",
+    "        else:\n",
+    "            print(f\"'{column}' has the expected data type {dtype}.\")\n",
+    "\n",
+    "# Create a function to validate data completeness\n",
+    "def validate_completeness(df):\n",
+    "    # Expectation: Ensure that no more than 10% of any column's values are missing\n",
+    "    for column in df.columns:\n",
+    "        missing_percent = df[column].isnull().sum() / len(df) * 100\n",
+    "        if missing_percent > 10:\n",
+    "            print(f\"Warning: '{column}' has more than 10% missing data.\")\n",
+    "        else:\n",
+    "            print(f\"'{column}' completeness is within acceptable limits.\")\n",
+    "\n",
+    "# Create a function to validate data accuracy\n",
+    "def validate_accuracy(df):\n",
+    "    # Example: Validate that 'age' column values are non-negative\n",
+    "    if (df['age'] < 0).any():\n",
+    "        print(\"Error: 'age' column contains negative values.\")\n",
+    "    else:\n",
+    "        print(\"'age' column contains valid values.\")\n",
+    "\n",
+    "# Unit Tests to validate the expectations\n",
+    "class TestDataQuality(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.df = load_data(\"sample_data.csv\")\n",
+    "        \n",
+    "    def test_completeness(self):\n",
+    "        # Ensure no column has more than 10% missing data\n",
+    "        for column in self.df.columns:\n",
+    "            missing_percent = self.df[column].isnull().sum() / len(self.df) * 100\n",
+    "            self.assertLessEqual(missing_percent, 10, f\"{column} has more than 10% missing data.\")\n",
+    "    \n",
+    "    def test_column_presence(self):\n",
+    "        required_columns = ['customer_id', 'age', 'gender']\n",
+    "        for column in required_columns:\n",
+    "            self.assertIn(column, self.df.columns, f\"{column} is missing from the dataset.\")\n",
+    "    \n",
+    "    def test_data_types(self):\n",
+    "        expected_dtypes = {\n",
+    "            'customer_id': 'int64',\n",
+    "            'age': 'float64',\n",
+    "            'gender': 'object'\n",
+    "        }\n",
+    "        for column, dtype in expected_dtypes.items():\n",
+    "            self.assertEqual(self.df[column].dtype, dtype, f\"{column} does not have the expected data type.\")\n",
+    "\n",
+    "# Main process\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Load the dataset\n",
+    "    df = load_data(\"sample_data.csv\")\n",
+    "    if df is not None:\n",
+    "        # Setup Great Expectations\n",
+    "        context = setup_data_context()\n",
+    "        if context is not None:\n",
+    "            create_expectations(df)\n",
+    "            validate_completeness(df)\n",
+    "            validate_accuracy(df)\n",
+    "        \n",
+    "        # Run the unit tests\n",
+    "        unittest.main(argv=[''], exit=False)\n"
    ]
   },
   {
