Implement data quality monitoring with Great Expectations, email alerts, and real-time checks

--- a/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Create a Great Expectations dataframe\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m ge_df \u001b[38;5;241m=\u001b[39m \u001b[43mge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m(df)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Use Great Expectations' built-in expectation for age\u001b[39;00m\n\u001b[1;32m     18\u001b[0m ge_df\u001b[38;5;241m.\u001b[39mexpect_column_values_to_be_between(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m18\u001b[39m, \u001b[38;5;241m120\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Create a Great Expectations dataframe\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m ge_df \u001b[38;5;241m=\u001b[39m \u001b[43mge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m(df)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Add a built-in expectation (checking the age range)\u001b[39;00m\n\u001b[1;32m     17\u001b[0m ge_df\u001b[38;5;241m.\u001b[39mexpect_column_values_to_be_between(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m18\u001b[39m, \u001b[38;5;241m120\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'great_expectations' has no attribute 'from_pandas'"
      ]
     }
@@ -41,19 +41,40 @@
     "import time\n",
     "\n",
     "# Task 1: Custom Expectation using Great Expectations\n",
-    "\n",
-    "# Sample DataFrame\n",
+    "# Sample data\n",
     "data = {'age': [25, 30, 35, 40, 45], 'income': [50000, 60000, 75000, None, 100000]}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Create a Great Expectations dataframe\n",
     "ge_df = ge.from_pandas(df)\n",
     "\n",
-    "# Use Great Expectations' built-in expectation for age\n",
+    "# Add a built-in expectation (checking the age range)\n",
     "ge_df.expect_column_values_to_be_between(\"age\", 18, 120)\n",
     "\n",
-    "# Task 2: Email Alert System with Enhanced Error Handling\n",
+    "# Custom expectation: Expect that income values are greater than 0\n",
+    "def expect_income_greater_than_zero(df, column):\n",
+    "    \"\"\"\n",
+    "    Custom Expectation: Check if income values are greater than 0\n",
+    "    \"\"\"\n",
+    "    result = df[column] > 0\n",
+    "    if result.all():\n",
+    "        return {\"success\": True, \"result\": {\"observed_value\": df[column].values}}\n",
+    "    else:\n",
+    "        return {\"success\": False, \"result\": {\"observed_value\": df[column].values}}\n",
     "\n",
+    "# Add custom expectation to the dataframe\n",
+    "ge_df.add_expectation(\n",
+    "    expectation_type=\"expect_column_values_to_be_in_set\",\n",
+    "    kwargs={\"column\": \"income\", \"value_set\": [value for value in df['income'] if value > 0]}\n",
+    ")\n",
+    "\n",
+    "# Validate the custom expectation\n",
+    "validation_result = ge_df.validate()\n",
+    "print(validation_result)\n",
+    "\n",
+    "\n",
+    "# Task 2: Email Alert System with Enhanced Error Handling\n",
+    "# Function to send email alerts\n",
     "def send_email_alert(subject, body, recipient_email):\n",
     "    try:\n",
     "        # Email configuration\n",
@@ -82,21 +103,25 @@
     "    except Exception as e:\n",
     "        print(f\"An error occurred: {e}\")\n",
     "\n",
-    "# Task 3: Real-time Data Quality Monitoring\n",
+    "# Sample test for sending an alert\n",
+    "send_email_alert(\"Data Quality Alert\", \"Your data quality is below the expected threshold.\", \"recipient@example.com\")\n",
     "\n",
+    "\n",
+    "# Task 3: Real-time Data Quality Monitoring\n",
+    "# Simulate fetching new data\n",
     "def fetch_new_data():\n",
     "    # Placeholder function to simulate fetching new data\n",
-    "    # Replace with actual data fetching mechanism (e.g., from a database or API)\n",
     "    new_data = {'age': [50], 'income': [120000]}\n",
     "    return pd.DataFrame(new_data)\n",
     "\n",
+    "# Data quality check (for demonstration purposes)\n",
     "def check_data_quality(data):\n",
-    "    # Placeholder function to simulate data quality check\n",
-    "    # Check for missing values or any other criteria\n",
+    "    # Check if 'income' contains any null values (simplified check for this example)\n",
     "    if data['income'].isnull().any():\n",
     "        return False\n",
     "    return True\n",
     "\n",
+    "# Function to simulate real-time monitoring of data\n",
     "def monitor_data_quality_stream():\n",
     "    while True:\n",
     "        # Simulate data ingestion (Replace this with actual data fetching)\n",
@@ -105,7 +130,7 @@
     "        # Perform data quality checks\n",
     "        if not check_data_quality(data):\n",
     "            send_email_alert(\n",
-    "                \"Data quality issue detected\",\n",
+    "                \"Data Quality Alert\",\n",
     "                \"Data quality is below acceptable thresholds.\",\n",
     "                \"recipient@example.com\"\n",
     "            )\n",
@@ -113,7 +138,7 @@
     "        # Wait for new data or events\n",
     "        time.sleep(60)  # Wait for 1 minute, adjust as needed\n",
     "\n",
-    "# Call the function to start monitoring\n",
+    "# Start the real-time data quality monitoring\n",
     "monitor_data_quality_stream()\n"
    ]
   },
@@ -122,7 +147,56 @@
    "metadata": {},
    "source": [
     "### Task 2: Implement a Basic Alert System for Data Quality Drops\n",
-    "**Description**: Set up a basic alert system that triggers when data quality drops."
+    "**Description**: Set up a basic alert system that triggers when data quality drops.\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample data\n",
+    "data = {\n",
+    "    'transaction_id': [101, 102, 103, np.nan, 105],\n",
+    "    'product_id': [1, 2, 3, 4, np.nan],\n",
+    "    'quantity_sold': [3, 5, 2, 4, 1],\n",
+    "    'transaction_date': ['2025-05-01', '2025-05-02', '2025-05-03', '2025-05-04', '2025-05-05'],\n",
+    "    'total_price': [100.0, 200.0, 50.0, 80.0, np.nan]\n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# KPI 1: Transaction Accuracy Rate\n",
+    "valid_transactions = df.dropna(subset=['quantity_sold', 'total_price'])\n",
+    "transaction_accuracy_rate = (len(valid_transactions) / len(df)) * 100\n",
+    "\n",
+    "# KPI 2: Sales Data Completeness Rate\n",
+    "columns_to_check = ['transaction_id', 'product_id', 'quantity_sold', 'total_price']\n",
+    "missing_data_count = df[columns_to_check].isnull().sum().sum()\n",
+    "total_possible_missing = len(df) * len(columns_to_check)\n",
+    "sales_data_completeness_rate = ((total_possible_missing - missing_data_count) / total_possible_missing) * 100\n",
+    "\n",
+    "# KPI 3: Data Freshness Rate\n",
+    "df['transaction_date'] = pd.to_datetime(df['transaction_date'])\n",
+    "df['current_date'] = pd.to_datetime('2025-05-06')  # Today's date\n",
+    "df['time_diff'] = (df['current_date'] - df['transaction_date']).dt.days\n",
+    "timely_transactions = df[df['time_diff'] <= 1]\n",
+    "data_freshness_rate = (len(timely_transactions) / len(df)) * 100\n",
+    "\n",
+    "# Set thresholds for alerting\n",
+    "thresholds = {\n",
+    "    \"transaction_accuracy_rate\": 90.0,  # Alert if accuracy drops below 90%\n",
+    "    \"sales_data_completeness_rate\": 95.0,  # Alert if completeness drops below 95%\n",
+    "    \"data_freshness_rate\": 80.0  # Alert if freshness drops below 80%\n",
+    "}\n",
+    "\n",
+    "# Check and trigger alerts if any KPI is below the threshold\n",
+    "if transaction_accuracy_rate < thresholds[\"transaction_accuracy_rate\"]:\n",
+    "    print(f\"Alert! Transaction Accuracy Rate is low: {transaction_accuracy_rate:.2f}%\")\n",
+    "\n",
+    "if sales_data_completeness_rate < thresholds[\"sales_data_completeness_rate\"]:\n",
+    "    print(f\"Alert! Sales Data Completeness Rate is low: {sales_data_completeness_rate:.2f}%\")\n",
+    "\n",
+    "if data_freshness_rate < thresholds[\"data_freshness_rate\"]:\n",
+    "    print(f\"Alert! Data Freshness Rate is low: {data_freshness_rate:.2f}%\")\n",
+    "\n"
    ]
   },
   {
