--- a/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_3.ipynb
+++ b/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_3.ipynb
@@ -18,21 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 'sample_transactions.csv' has been created.\n"
+      "✅ sample_transactions.csv created.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Sample transaction data as a dictionary\n",
     "data = {\n",
     "    'Transaction_ID': ['TXN001', 'TXN002', 'TXN003', 'TXN003', 'TXN005'],\n",
     "    'Date': ['2025-05-01', '2025-05-01', '2025-05-02', '2025-05-02', '2026-01-01'],\n",
@@ -43,162 +42,43 @@
     "    'Status': ['Success', 'Failed', 'Pending', 'Pending', 'Succcess']\n",
     "}\n",
     "\n",
-    "# Create a DataFrame\n",
     "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Save to CSV\n",
     "df.to_csv('sample_transactions.csv', index=False)\n",
-    "\n",
-    "print(\"✅ 'sample_transactions.csv' has been created.\")\n"
+    "print(\"✅ sample_transactions.csv created.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Data:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account   Amount  \\\n",
-      "0         TXN001 2025-05-01      1234567890         987654321  500.000   \n",
-      "1         TXN002 2025-05-01      1234567890         987654321 -100.000   \n",
-      "2         TXN003 2025-05-02      2345678901        8765432109  250.000   \n",
-      "3         TXN003 2025-05-02      2345678901        8765432109  250.000   \n",
-      "4         TXN005 2026-01-01      3456789012        4567890123   99.999   \n",
-      "\n",
-      "  Currency    Status  \n",
-      "0      USD   Success  \n",
-      "1      USD    Failed  \n",
-      "2      USD   Pending  \n",
-      "3      USD   Pending  \n",
-      "4      usd  Succcess  \n",
-      "\n",
-      "--- VALIDATION RESULTS ---\n",
-      "\n",
-      "[1] Duplicate Transaction IDs:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "2         TXN003 2025-05-02      2345678901        8765432109   250.0   \n",
-      "3         TXN003 2025-05-02      2345678901        8765432109   250.0   \n",
-      "\n",
-      "  Currency   Status  \n",
-      "2      USD  Pending  \n",
-      "3      USD  Pending  \n",
-      "\n",
-      "[2] Invalid Amounts for 'Success':\n",
-      " Empty DataFrame\n",
-      "Columns: [Transaction_ID, Date, Sender_Account, Receiver_Account, Amount, Currency, Status]\n",
-      "Index: []\n",
-      "\n",
-      "[3] Invalid Currency Codes:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "4         TXN005 2026-01-01      3456789012        4567890123  99.999   \n",
-      "\n",
-      "  Currency    Status  \n",
-      "4      usd  Succcess  \n",
-      "\n",
-      "[4] Missing Critical Fields:\n",
-      " Empty DataFrame\n",
-      "Columns: [Transaction_ID, Date, Sender_Account, Receiver_Account, Amount, Currency, Status]\n",
-      "Index: []\n",
-      "\n",
-      "[5] Invalid Account Numbers:\n",
-      " Empty DataFrame\n",
-      "Columns: [Transaction_ID, Date, Sender_Account, Receiver_Account, Amount, Currency, Status]\n",
-      "Index: []\n",
-      "\n",
-      "[6] Invalid Status Values:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "4         TXN005 2026-01-01      3456789012        4567890123  99.999   \n",
-      "\n",
-      "  Currency    Status  \n",
-      "4      usd  Succcess  \n",
-      "\n",
-      "[7] Future-dated Transactions:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "4         TXN005 2026-01-01      3456789012        4567890123  99.999   \n",
-      "\n",
-      "  Currency    Status  \n",
-      "4      usd  Succcess  \n",
-      "\n",
-      "[8] Duplicate Transactions (by details):\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "2         TXN003 2025-05-02      2345678901        8765432109   250.0   \n",
-      "3         TXN003 2025-05-02      2345678901        8765432109   250.0   \n",
-      "\n",
-      "  Currency   Status  \n",
-      "2      USD  Pending  \n",
-      "3      USD  Pending  \n",
-      "\n",
-      "[9] Amounts with Too Many Decimal Places:\n",
-      "   Transaction_ID       Date  Sender_Account  Receiver_Account  Amount  \\\n",
-      "4         TXN005 2026-01-01      3456789012        4567890123  99.999   \n",
-      "\n",
-      "  Currency    Status  \n",
-      "4      usd  Succcess  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Write your code from here\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from datetime import datetime\n",
     "\n",
-    "# Load the CSV file\n",
-    "df = pd.read_csv('sample_transactions.csv')\n",
+    "def validate_transactions(df):\n",
+    "    issues = {}\n",
     "\n",
-    "# Convert 'Date' to datetime format\n",
-    "df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
+    "    try:\n",
+    "        df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
+    "    except Exception as e:\n",
+    "        issues['date_conversion_error'] = str(e)\n",
+    "        return issues\n",
     "\n",
-    "print(\"Original Data:\\n\", df)\n",
+    "    try:\n",
+    "        issues['duplicate_ids'] = df[df.duplicated('Transaction_ID', keep=False)]\n",
+    "        issues['invalid_amounts'] = df[(df['Amount'] <= 0) & (df['Status'] == 'Success')]\n",
+    "        issues['invalid_currency'] = df[~df['Currency'].isin(['USD', 'EUR', 'INR'])]\n",
+    "        issues['missing_fields'] = df[df[['Transaction_ID', 'Amount', 'Sender_Account', 'Status']].isnull().any(axis=1)]\n",
+    "        issues['invalid_accounts'] = df[~df['Sender_Account'].astype(str).str.match(r'^\\d{10}$')]\n",
+    "        issues['invalid_status'] = df[~df['Status'].isin(['Success', 'Failed', 'Pending'])]\n",
+    "        issues['future_dates'] = df[df['Date'] > pd.to_datetime(datetime.now())]\n",
+    "        issues['duplicate_rows'] = df[df.duplicated(['Sender_Account', 'Receiver_Account', 'Amount', 'Date'], keep=False)]\n",
+    "        issues['decimal_precision'] = df[df['Amount'].apply(lambda x: round(x, 2) != x)]\n",
+    "    except Exception as e:\n",
+    "        issues['processing_error'] = str(e)\n",
     "\n",
-    "# --- Validation Checks ---\n",
-    "\n",
-    "# 1. Duplicate Transaction_ID\n",
-    "duplicate_ids = df[df.duplicated('Transaction_ID', keep=False)]\n",
-    "\n",
-    "# 2. Negative or Zero Amounts for 'Success' Status\n",
-    "invalid_amounts = df[(df['Amount'] <= 0) & (df['Status'] == 'Success')]\n",
-    "\n",
-    "# 3. Invalid Currency Codes (expect uppercase ISO 3-letter codes)\n",
-    "valid_currencies = ['USD', 'EUR', 'INR']\n",
-    "invalid_currency = df[~df['Currency'].isin(valid_currencies)]\n",
-    "\n",
-    "# 4. Missing Critical Fields\n",
-    "missing_values = df[df[['Transaction_ID', 'Amount', 'Sender_Account', 'Status']].isnull().any(axis=1)]\n",
-    "\n",
-    "# 5. Invalid Account Numbers (non-numeric or not 10 digits)\n",
-    "invalid_accounts = df[~df['Sender_Account'].astype(str).str.isnumeric() |\n",
-    "                      (df['Sender_Account'].astype(str).str.len() != 10)]\n",
-    "\n",
-    "# 6. Invalid Status Values\n",
-    "valid_statuses = ['Success', 'Failed', 'Pending']\n",
-    "invalid_status = df[~df['Status'].isin(valid_statuses)]\n",
-    "\n",
-    "# 7. Future Transaction Dates\n",
-    "future_dates = df[df['Date'] > pd.to_datetime(datetime.now())]\n",
-    "\n",
-    "# 8. Duplicate Transactions (same sender, receiver, amount, and date)\n",
-    "duplicate_rows = df[df.duplicated(subset=['Sender_Account', 'Receiver_Account', 'Amount', 'Date'], keep=False)]\n",
-    "\n",
-    "# 9. Amounts with too many decimal places\n",
-    "decimal_check = df[df['Amount'].apply(lambda x: round(x, 2) != x)]\n",
-    "\n",
-    "# --- Display Issues ---\n",
-    "\n",
-    "print(\"\\n--- VALIDATION RESULTS ---\")\n",
-    "print(\"\\n[1] Duplicate Transaction IDs:\\n\", duplicate_ids)\n",
-    "print(\"\\n[2] Invalid Amounts for 'Success':\\n\", invalid_amounts)\n",
-    "print(\"\\n[3] Invalid Currency Codes:\\n\", invalid_currency)\n",
-    "print(\"\\n[4] Missing Critical Fields:\\n\", missing_values)\n",
-    "print(\"\\n[5] Invalid Account Numbers:\\n\", invalid_accounts)\n",
-    "print(\"\\n[6] Invalid Status Values:\\n\", invalid_status)\n",
-    "print(\"\\n[7] Future-dated Transactions:\\n\", future_dates)\n",
-    "print(\"\\n[8] Duplicate Transactions (by details):\\n\", duplicate_rows)\n",
-    "print(\"\\n[9] Amounts with Too Many Decimal Places:\\n\", decimal_check)\n"
+    "    return issues\n"
    ]
   },
   {
@@ -216,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +139,53 @@
     "\n",
     "    return issues\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'validation_module'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01munittest\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mvalidation_module\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m validate_transactions\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mTestTransactionValidation\u001b[39;00m(unittest\u001b[38;5;241m.\u001b[39mTestCase):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msetUp\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'validation_module'"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
+    "import pandas as pd\n",
+    "from validation_module import validate_transactions\n",
+    "\n",
+    "class TestTransactionValidation(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.df = pd.DataFrame({\n",
+    "            'Transaction_ID': ['T1', 'T1'],\n",
+    "            'Date': ['2025-05-01', '2025-05-01'],\n",
+    "            'Sender_Account': ['1234567890', '1234567890'],\n",
+    "            'Receiver_Account': ['0987654321', '0987654321'],\n",
+    "            'Amount': [100.00, -50.00],\n",
+    "            'Currency': ['USD', 'USD'],\n",
+    "            'Status': ['Success', 'Success']\n",
+    "        })\n",
+    "        self.df['Date'] = pd.to_datetime(self.df['Date'])\n",
+    "\n",
+    "    def test_duplicate_ids(self):\n",
+    "        issues = validate_transactions(self.df)\n",
+    "        self.assertFalse(issues['duplicate_ids'].empty)\n",
+    "\n",
+    "    def test_invalid_amounts(self):\n",
+    "        issues = validate_transactions(self.df)\n",
+    "        self.assertFalse(issues['invalid_amounts'].empty)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()\n"
    ]
   }
  ],
